# Job-Aggregator

./: .env  backup.py  config.py  debug_mcp.py  debug_output.txt  final_test.py  graph.mermaid  hardcode_indeed.py  log.txt  log_output.txt  main.py  mcp_output.json  mcp_tools.json  print_graph.py  pyproject.toml  requirements.txt  server.py  test.http  test_firecrawl.py  test_imports.py  test_server_local.py  test_tavily_manual.py  testtt.py  testtt2.py  testtttt.ipynb
bro/: pyvenv.cfg
bro/Scripts/: activate  activate.bat
components/: .env  final_answer.py  indeed.py  job_query.py  linkedin.py  mcp_compat.py  mcp_server.py  router.py  scrap_structure.py  structure_data.py
frontend/: package-lock.json  package.json
frontend/src/app/assistant/: page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/get-started/sign-up/: page.tsx
frontend/src/components/: ChatInterface.tsx  ChatSidebar.tsx
frontend/src/lib/: api.ts
